--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="bannerBnanerBANNERImgae">
-            <h2>We make joke mods and GREAT GAMES.</h2>
+            <h2>We make joke mods and <i>GREAT GAMES</i>.</h2>
         </div>
             
         <div class="navigatiobBUTIntrooooo0o0o0o0o0o0o0">
@@ -30,17 +30,17 @@
         <div class="burger">
             <div class="navigatiobGame_1">                
                 <img src="indexs/HHHOOOwwW.png" alt="HHHOOOwwW">
-                <p>How - A puzzle Game That is Better than Geometry Dash 2.2 Platformer Mode Levels</p>
+                <p>How - A puzzle game that is better than Geometry Dash 2.2 Platformer Mode Levels.</p>
             </div>
 
             <div class="navigatiobGame_2">
                 <img src="indexs/Sidecar.png" alt="WH" width="325">
-                <p>WH - The most simple yet complex game. Better Gameplay than Cookie Clicker!</p>
+                <p>WH - The most simple yet complex game, with better gameplay than Cookie Clicker!</p>
             </div>
 
             <div class="iwannalive">
                 <img src="indexs/New Piskel-1.pngs.png" alt="T-DROP" width="425">
-                <p>T-DROP - Basically a fnf in roblox game, nothing special. Better than Funky Friday tho</p>
+                <p>T-DROP - Basically a FNF in roblox game, nothing special really. Better than Funky Friday though.</p>
             </div>
         </div>
     </body>
