--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li>Home</li>
                 <li>Our Games</li>
                 <li>Contact Us</li>
+                <li><i>Doesn't work lol get trolled</i></li>
             </ul>
         </div>
 
