--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
             
         <div class="navigatiobBUTIntrooooo0o0o0o0o0o0o0">
-            <p>Yes, our mods are a joke, but our original games are <i>GREAT</i>, and we mean it! Come check them out!</p>
+            <p>Our mods are a joke, but our original games are <i>GREAT</i>, and we mean it! Come check them out!</p>
         </div>
             
         <div class="burger">
